--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_TITLE = "Saturn Stations"
-REACT_APP_DESCRIPTION = "Saturn Stations an example app created in React"
+REACT_APP_TITLE = "Tag it"
+REACT_APP_DESCRIPTION = "Chronological tagger of values"
 REACT_APP_API_ENDPOINT = "http://localhost:3001"
