--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,10 @@
-# FROM node:13.12.0-alpine
-FROM node:10-slim
-# set a health check
-#HEALTHCHECK --interval=5s \
-#            --timeout=5s \
-#            CMD curl -f http://127.0.0.1:8080 || exit 1
-
+FROM node:alpine
 WORKDIR /app
 COPY ./package*.json ./
-COPY config.js ./
-# RUN npm ci
+# COPY config.js ./
 RUN npm install --quiet
 COPY . .
 RUN chown -R node:node /app
 USER node
 EXPOSE 3001
-#CMD npm start CMD 
-
-# CMD npm start
 CMD [ "node", "server.js" ]
