--- a/backend/package.json
+++ b/backend/package.json
@@ -18,16 +18,16 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.0.2",
-    "express": "~4.16.1",
+    "express": "^4.19.1",
     "helmet": "^3.23.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.6.9",
+    "mongoose": "^5.11.15",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
-    "nodemon": "^2.0.3",
+    "mocha": "^10.3.0",
+    "nodemon": "^3.1.0",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   }
