--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "should": "^13.2.3",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
